--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Social Media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity">https://facebook.com/vaibhavydv</i>
+  <i class="fa fa-facebook-official w3-hover-opacity"><a href="https://facebook.com/vaibhavydv"></a></i>
   <i class="fa fa-instagram w3-hover-opacity">https://instagram.com/_vaibhavyadav</i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
